--- a/src/main.scss
+++ b/src/main.scss
@@ -10,3 +10,30 @@ body {
     width: 200px;
     margin: 50px auto;
 }
+
+.pdf-background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.pdf-button--close {
+    position: absolute !important;
+    top: 10px;
+    right: 20px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.pdfBlock {
+    position: fixed;
+    top: 40px;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    margin: auto;
+    z-index: 10;
+}
