--- a/src/main.scss
+++ b/src/main.scss
@@ -12,16 +12,17 @@ body {
 }
 
 .pdf-background {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9;
 }
 
 .pdf-button--close {
-    position: absolute !important;
+    position: fixed !important;
     top: 10px;
     right: 20px;
     color: #fff;
